--- a/Resources/views/Default/menu.html.twig
+++ b/Resources/views/Default/menu.html.twig
@@ -1,5 +1,6 @@
 <ul>
 {% for c in collection %}
-    <li><div class="selector"><a href="{{ c.path }}"><div class="selector-icon"></div><span class="text">{{ c.name }}</span></a></div></li>
+    {% set path = path('GpupoCamelSpiderReaderBundle_folder', {'type': type, 'id': c.id}) %}
+    <li><div class="selector"><a href="{{ path }}"><div class="selector-icon"></div><span class="text">{{ c.name }}</span></a></div></li>
 {% endfor %}
 </ul>
