add unit tests and htmlToIntro

--- a/Resources/views/Default/sidebar.html.twig
+++ b/Resources/views/Default/sidebar.html.twig
@@ -3,7 +3,14 @@
 </div>
 
 <div class="content ui-widget-content">
-    <h2 class="">Notícias</h2>
+    <h2 class=""><a href="{{ path('GpupoCamelSpiderReaderBundle_homepage') }}">Notícias</a></h2>
+    <div class="search">
+        <form>
+            <input type="text" name="search" placeholder="procurar..."/>
+        </form>
+    </div>
+
+
     <div class="auto accordion">
 
         <h3><a href="#">Categorias</a></h3>
