--- a/Resources/views/Default/line.html.twig
+++ b/Resources/views/Default/line.html.twig
@@ -8,7 +8,7 @@
         {{ Gless.ButtonA('Enviar notícia a um amigo', 'javascript:void(0)', {'icon': 'mail-closed', 'with_text': 'no'}) }}
     </div>
     <div class="txt">
-        {{ news.contentIntro }}
+        {{ news.contentIntro|raw }}
         <a href="javascript:$('.title #id_{{ news.id }}').trigger('click');void(0);" class="more" title="leia mais">...</a>
     </div>
 
