--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -14,6 +14,11 @@
 </div>
 
 {% if collection|default(null) %}
+
+<div id="send_to_email_window" title="Enviar notícia por email" style="height: 400px; min-height: 109px; width: auto; display:none;" >
+    <iframe id="send_to_iframe" src="/_blank.html"></iframe>
+</div>
+
 <div class="tabs newsCollection">
     <ul>
         <li><a href="#tabs-1">{{ node.name|default('Últimas') }}</a></li>
@@ -33,28 +38,10 @@
 <script>
 
 jQuery(document).ready(function(){
-    $(".classificacao .stars .stars-wrapper").stars({
-        inputType: "select",
-        cancelShow: false,
-        callback: function(ui, type, value){
-            console.log("stars value:"+value);
-            news_id = ui.options.name.replace('vote_','');
-            console.log("News ID:"+news_id);
-            //Envia o voto para o controller
-            $.post("{{ path('stars_submit') }}", {vote:{rate: value, news_id: news_id}}, function(json)
-            {
-                if(json.responseCode == 200){
-                    //Recebe a média de votação da news
-                    average_select=".global .stars #form_vote_average_"+json.news_id+" .stars-wrapper";
-                    $(average_select).stars("select", json.average);
-                }
-            },'json');
-        }
-    });
-
-    $(".global .stars .stars-wrapper").stars({
-        inputType: "select",
-        disabled: true
+    $(".ui-button.news_send").click(function(){
+        $("#send_to_email_window" ).dialog();
+        $("#send_to_email_window #send_to_iframe").attr("src", this.href);
+        return false;
     });
 });
 </script>
