--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -15,8 +15,8 @@
 
 {% if collection|default(null) %}
 
-<div id="send_to_email_window" title="Enviar notícia por email" style="height: 400px; min-height: 109px; width: auto; display:none;" >
-    <iframe id="send_to_iframe" src="/_blank.html" width="800" height="700"></iframe>
+<div id="send_to_email_window" title="Enviar notícia por email" style="height: 400px; min-height: 109px; display:none;" >
+    <iframe id="send_to_iframe" src="/_blank.html" width="760" height="700" style="border:none" scrolling="no"></iframe>
 </div>
 
 <div class="tabs newsCollection">
