--- a/Resources/views/Default/send.html.twig
+++ b/Resources/views/Default/send.html.twig
@@ -15,12 +15,12 @@
 <script type="text/javascript" src="/plugins/CLEditor/jquery.cleditor.js"></script>
 <style>
     form.send { width: 700px; }
-    input { width:550px; margin:20px; }
+    input { width:500px; margin:20px; }
 </style>
 <script type="text/javascript">
   $(document).ready(function() {
       console.log('Init rich text');
-      $("#form_content").cleditor({ width: 700, height: 350 });
+      $("#form_body").cleditor({ width: 700, height: 350 });
   });
 </script>
 
