--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -18,7 +18,7 @@
 <div id="send_to_email_window" title="Enviar notícia por email" style="height: 400px; min-height: 109px; display:none;" >
     <iframe id="send_to_iframe" src="/_blank.html" width="760" height="700" style="border:none" scrolling="no"></iframe>
 </div>
-
+<input type="hidden" id="url_submit_vote" value="{{ path('stars_submit') }}" />
 <div class="tabs newsCollection">
     <ul>
         <li><a href="#tabs-1">{{ node.name|default('Últimas') }}</a></li>
