--- a/Resources/views/Default/sidebar.html.twig
+++ b/Resources/views/Default/sidebar.html.twig
@@ -8,9 +8,9 @@
     <div class="auto accordion">
 
         <h3><a href="#">Categorias</a></h3>
-        <div>{% render "GpupoCamelSpiderReaderBundle:Default:getMenu" with {'type': 'Category'} %}</div>
+        <div>{% render "GpupoCamelSpiderReaderBundle:Default:getMenu" with {'type': 'Category', 'node': node | default(null), 'folderType': folderType | default(null)} %}</div>
 
         <h3><a href="#">Fontes</a></h3>
-        <div>{% render "GpupoCamelSpiderReaderBundle:Default:getMenu" with {'type': 'Subscription'} %}</div>
+        <div>{% render "GpupoCamelSpiderReaderBundle:Default:getMenu" with {'type': 'Subscription', 'node': node | default(null), 'folderType': folderType | default(null)} %}</div>
     </div>
 </div>
