layout de leitura

--- a/Resources/views/Default/menu.html.twig
+++ b/Resources/views/Default/menu.html.twig
@@ -1,6 +1,11 @@
 <ul>
 {% for c in collection %}
     {% set path = path('GpupoCamelSpiderReaderBundle_folder', {'type': type, 'id': c.id}) %}
-    <li class="{% if type == 'Category' %}level_{{ c.lvl }}{% endif %}{% if node and folderType and type == folderType and node.id == c.id %} selected{% endif %}"><div class="selector"><a href="{{ path }}"><div class="selector-icon"></div><span class="text">{{ c.name }}</span></a></div></li>
+    {% if node and folderType and type == folderType and node.id == c.id %}
+        {% set selected = ' selected' %}
+    {% else %}
+        {% set selected = '' %}
+    {% endif %}
+    <li class="{% if type == 'Category' %}level_{{ c.lvl }}{% endif %}{{ selected }}"><div class="selector{{selected}}"><a href="{{ path }}"><div class="selector-icon"></div><span class="text">{{ c.name }}</span></a></div></li>
 {% endfor %}
 </ul>
