--- a/Resources/views/Default/news.html.twig
+++ b/Resources/views/Default/news.html.twig
@@ -1,25 +1,9 @@
-<!doctype html>
-<!--[if lt IE 7]><html class="no-js ie6 oldie" lang="en"><![endif]-->
-<!--[if IE 7]>  <html class="no-js ie7 oldie" lang="en"><![endif]-->
-<!--[if IE 8]>  <html class="no-js ie8 oldie" lang="en"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]-->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{{ news.title }}</title>
-    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
-    <!-- Suppress IE6's pop-up-on-mouseover toolbar for images -->
-    <meta http-equiv="imagetoolbar" content="false" />
-</head>
-<body>
+{% extends '::print.html.twig' %}
+{% block content %}
 <h1>{{ news.title }}</h1>
 <div class="txt">
     {{ news.content|raw }}
+    <p>Fonte: <a href="{{ news.uri }}">{{ news.subscription.name }}</a></p>
+    <span class="label">Categoria:</span> {{ news.category.getPathNamesString }}
 </div>
-
-<div class="fonte">
-    <p><span class="label">Fonte:</span><em>{{ news.subscription.name }}</em></p>
-    <p>{{ news.uri }}</p>
-</div>
-</body>
-</html>
+{% endblock %}
