--- a/Resources/views/Default/line.html.twig
+++ b/Resources/views/Default/line.html.twig
@@ -11,17 +11,23 @@
         {{ news.contentIntro|raw }}
         <a href="javascript:$('.title #id_{{ news.id }}').trigger('click');void(0);" class="more" title="leia mais">...</a>
     </div>
-
-    <div class="fonte">
-        <span class="label">Fonte:</span> <a href="{{ news.uri }}" target="_blank">{{ news.subscription.name }}</a>
-    </div>
-    <div class="breadcrumb">
-        <span class="label">Categoria:</span> {{ news.category.getPathNamesString }}
-    </div>
-
+    
+    
 {# Stars #}
     <div class="bar-footer">
         <div class="feedback"></div>
+    <div class="info">
+        <div class="date item">
+            <span class="label">Data:</span><b>{{ news.createdAt.format('d/m/Y H:i:s') }}</b>
+        </div>
+        <div class="fonte item">
+            <span class="label">Fonte:</span><b><a href="{{ news.uri }}" target="_blank">{{ news.subscription.name }}</a></b>
+        </div>
+        <div class="breadcrumb item">
+            <span class="label">Categoria:</span><b>{{ news.category.getPathNamesString }}</b>
+        </div>
+    </div>
+
         <div>
             <div class="classificacao">{% include 'GpupoGlessBundle:Forms:stars.html.twig' with { 'options': { 'id': news.id, 'action': path('stars_submit'), 'value': news.getUserVote(app.user) } } %}</div>
             <div class="global pull-right"> {% include 'GpupoGlessBundle:Forms:stars.html.twig' with { 'options': {'id': 'average_' ~ news.id, 'label':'Classificação Global', 'value': news.getVoteAverage } } %} </div>
