--- a/Resources/views/Default/line.html.twig
+++ b/Resources/views/Default/line.html.twig
@@ -1,25 +1,39 @@
 {% import 'GpupoGlessBundle::macros.html.twig' as Gless %}
 
-<h3 class="{{ cicle }} ui-accordion-header ui-helper-reset ui-state-default ui-corner-top ui-corner-bottom title"><a href="{{ path('GpupoCamelSpiderReaderBundle_news', {'news_id':news.id, '_format': 'html'}) }}" target="_blank" class="title" id="id_{{ news.id }}">{{ news.title }}</a></h3>
+<h3 class="{{ cicle }} ui-accordion-header ui-helper-reset ui-state-default ui-corner-top ui-corner-bottom title">
+    <a href="{{ path('GpupoCamelSpiderReaderBundle_news', {'news_id':news.id, '_format': 'html'}) }}" target="_blank" class="title" id="id_{{ news.id }}">
+        <span class="date">{{ news.createdAt.format('d/m/Y') }} -
+        </span><em>{{ news.title }}</em>
+        <a href="{{ news.uri }}" target="_blank" class="entry-original"></a>
+    </a>
+</h3>
 <div class="content id_{{ news.id }} ui-accordion-content  ui-helper-reset ui-widget-content ui-corner-bottom">
-    <div class="share">
-        {{ Gless.ButtonA('Imprimir notícia (nova página)', path('GpupoCamelSpiderReaderBundle_news', {'news_id':news.id, '_format': 'html'}), {'icon': 'print', 'with_text': 'no', 'target': '_blank'}) }}
-        {{ Gless.ButtonA('Salvar notícia em PDF', path('GpupoCamelSpiderReaderBundle_news', {'news_id':news.id, '_format': 'pdf'}), {'icon': 'disk', 'with_text': 'no', 'target': '_blank'}) }}
-        {{ Gless.ButtonA('Enviar notícia a um amigo', path('GpupoCamelSpiderReaderBundle_news_send', {'news_id':news.id}), {'icon': 'mail-closed', 'with_text': 'no', 'class': 'news_send'}) }}
-    </div>
     <div class="txt">
         {{ news.contentIntro|raw }}
         <a href="javascript:$('.title #id_{{ news.id }}').trigger('click');void(0);" class="more" title="leia mais">...</a>
     </div>
 {# Stars #}
     <div class="bar-footer">
-        <div class="feedback"></div>
-        {% include
-        'GpupoCamelSpiderReaderBundle:Default:_info.html.twig' with {
-            'news': news, 'subscription': news.subscription } %}
-        <div>
-            <div class="classificacao">{% include 'GpupoGlessBundle:Forms:stars.html.twig' with { 'options': { 'id': news.id, 'action': path('stars_submit'), 'value': news.getUserVote(app.user) } } %}</div>
-            <div class="global pull-right"> {% include 'GpupoGlessBundle:Forms:stars.html.twig' with { 'options': {'id': 'average_' ~ news.id, 'label':'Classificação Global', 'value': news.getVoteAverage } } %} </div>
+       <div class="classificacao item">
+            {% include 'GpupoGlessBundle:Forms:stars.html.twig'
+                with { 'options': { 'id': news.id, 'action': path('stars_submit'), 'value': news.getUserVote(app.user) } } %}
+        </div>
+
+        <div class="fonte item">
+            <span class="label">Fonte:</span>
+            <b><a href="{{ news.uri }}">{{ news.subscription.name }}</a></b>
+        </div>
+
+        <div class="share item">
+            {{ Gless.ButtonA('Imprimir notícia (nova página)', path('GpupoCamelSpiderReaderBundle_news', {'news_id':news.id, '_format': 'html'}), {'icon': 'print', 'with_text': 'no', 'target': '_blank'}) }}
+            {{ Gless.ButtonA('Salvar notícia em PDF', path('GpupoCamelSpiderReaderBundle_news', {'news_id':news.id, '_format': 'pdf'}), {'icon': 'disk', 'with_text': 'no', 'target': '_blank'}) }}
+            {{ Gless.ButtonA('Enviar notícia a um amigo', path('GpupoCamelSpiderReaderBundle_news_send', {'news_id':news.id}), {'icon': 'mail-closed', 'with_text': 'no', 'class': 'news_send'}) }}
+        </div>
+
+        <div class="global item"> 
+            {% include 'GpupoGlessBundle:Forms:stars.html.twig'
+                with { 'options': {'id': 'average_' ~ news.id,
+                'label':'Geral:', 'value': news.getVoteAverage } } %}
         </div>
     </div>
 </div>
