--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -25,12 +25,14 @@
         <li class="ui-state-default ui-corner-top ui-tabs-selected
         ui-state-active"><a href="#tabs-1">{{ node.name|default('Últimas') }}</a></li>
         {% if node|default(null) %}
-        {% for child in node.getChildren %}
-        <li class="children ui-state-default ui-corner-top"><a href="{{
-            path('GpupoCamelSpiderReaderBundle_folder', {'type':
-            'Category',
-            'id': child.id}) }} ">{{ child.name }}</a></li>
-        {% endfor %}
+            {% if node.getChildren is defined %}
+                {% for child in node.getChildren %}
+                <li class="children ui-state-default ui-corner-top"><a href="{{
+                    path('GpupoCamelSpiderReaderBundle_folder', {'type':
+                    'Category',
+                'id': child.id}) }} ">{{ child.name }}</a></li>
+                {% endfor %}
+            {% endif %}
         {% endif %}
     </ul>
     <div id="tabs-1" class="accordion news ui-accordion ui-widget ui-helper-reset">
