Corrige Bug data da notícia Funpar#67

--- a/Resources/views/Default/_info.html.twig
+++ b/Resources/views/Default/_info.html.twig
@@ -1,7 +1,7 @@
 <div class="info">
         <div class="date item">
             <span class="label">Data:</span>
-            <b>{{ news.createdAt.format('d/m/Y') }}</b>
+            <b>{{ news.date.format('d/m/Y') }}</b>
         </div>
         <div class="fonte item">
             <span class="label">Fonte:</span>
